# HAL-Simulated-Bootflow

./: .gitignore  CMakeLists.txt  Explanation.md  README.md  explanation.md  main.cpp
acpi/: acpi_manager.cpp  acpi_manager.h
boot/: bios.cpp  bios.h  bootloader.cpp  bootloader.h  kernel.cpp  kernel.h  shutdown_manager.cpp  shutdown_manager.h  uefi.cpp  uefi.h
drivers/: battery_driver.cpp  battery_driver.h  driver_base.h  keyboard_driver.cpp  keyboard_driver.h
hal/: battery_hal.cpp  battery_hal.h  keyboard_hal.cpp  keyboard_hal.h
